# music_training_camp_apps

./: .dockerignore  .env.example  .envrc  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy-to-pi.sh  docker-compose.prod.yml  docker-compose.yml  flake.nix  todo.md
rust-backend/: Cargo.toml  README.md
rust-backend/.sqlx/: query-02cd9241535816f19dabc635394de825b13139e071dbffd404ee639d23c8ce97.json  query-09cc9ffb086aeaea373fc194eca5c269b45634fc83dea21ae12bb50ac05d8943.json  query-17ab1c0483d223c93f7a8e7cacd822efa27cf8a91181d74504aeaf0035a9f94b.json  query-1d433d5b78c60534a2cd56e0d2aa39abc78402a8359d0e26d6e89388ad225c0d.json  query-201f4207063eb304b1bcb55b206a66119399513f8f568a015f17712bb0e79700.json  query-24ee3cc9d421699b1c8747825c9fa6e4c5910a4e41b1d410c4c132f2c61dd265.json  query-2a6a53b7647ce0df8893419cc67b019aa0f639448a9c5bf30677f3ca322433b2.json  query-2b7b90cf8bfdc65d01cd5b28e10228a1c9b2965b268cc031d4f10bd50e5481ad.json  query-32064de99a891e378e3f24b73e3f3391ca0aa386755c0c2bce2024bc5579e4ed.json  query-32c231a8d3f110fab8408a251b669e29b89ddc5a872eb6f7118c5555af4cef17.json  query-3380ac21edf37ba35cf4476b7f3be7a43fd61e838b99eef4e5234bbdb25263bd.json  query-36aecc30e24df274be9d9ab6590a38d59a568f10905a4bb55f6edd1af7259a8a.json  query-379e18630f1713af3651f92dd007b7bd637bad6b193dc7003a4cba2d44b22422.json  query-398b8e2d0af12854b62f804b6745c11ec176995ee2e1ccf0d749bb74054d21c8.json  query-3a81f60fbf6781b11cda820c7797372358280c4dd1a9ca31d54b582adf64f184.json  query-409f63cd0db1dfb253d498ddbe614e9de629a3176a7c226ead3fdac61b69cf1c.json  (+40 more)
rust-backend/bindings/: Band.ts  Feedback.ts  (+10 more)
(+142 files in other folders)
