[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"
description = "Rust backend for music training camp reservation system (replaces Deno kv-server.ts)"

[[bin]]
name = "rust-backend"
path = "src/main.rs"

[[bin]]
name = "import"
path = "src/bin/import.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# LINE webhook 署名検証
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Cookie の max_age で使用
time = { version = "0.3", features = ["std"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# SQLite
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TypeScript型生成
ts-rs = { version = "10", features = ["serde-compat"] }

# HTTP client (LINE API) - rustls を使用（OpenSSL 不要）
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenvy = "0.15"

# UUID
uuid = { version = "1", features = ["v4"] }

# Future utilities
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
